crates/dora-compiler/src/wasm/tests/snapshots/dora_compiler__wasm__tests__code__sum.snap
---
source: crates/dora-compiler/src/wasm/tests/code.rs
expression: module.module().as_operation()
snapshot_kind: text
---
"builtin.module"() ({
  "func.func"() <{function_type = (i32, i32) -> i32, sym_name = "f0"}> ({
  ^bb0(%arg0: i32, %arg1: i32):
    %0 = "arith.constant"() <{value = 1 : i64}> : () -> i64
    %1 = "llvm.alloca"(%0) <{elem_type = i32}> : (i64) -> i32
    "llvm.store"(%arg0, %1) <{ordering = 0 : i64}> : (i32, i32) -> ()
    %2 = "arith.constant"() <{value = 1 : i64}> : () -> i64
    %3 = "llvm.alloca"(%2) <{elem_type = i32}> : (i64) -> i32
    "llvm.store"(%arg1, %3) <{ordering = 0 : i64}> : (i32, i32) -> ()
    %4 = "llvm.load"(%1) <{ordering = 0 : i64}> : (i32) -> i32
    %5 = "llvm.load"(%3) <{ordering = 0 : i64}> : (i32) -> i32
    %6 = "wasm.add"(%4, %5) : (i32, i32) -> i32
    "cf.br"(%6)[^bb1] : (i32) -> ()
  ^bb1(%7: i32):  // pred: ^bb0
    "func.return"(%7) : (i32) -> ()
  }) : () -> ()
}) : () -> ()
